Use font-display: optional, fix whitespace

--- a/sass/common/_fonts.scss
+++ b/sass/common/_fonts.scss
@@ -3,8 +3,8 @@
   font-family: "Jost";
   font-style: normal;
   font-weight: 125 950;
-  font-display: swap;
-  src: 
+  font-display: optional;
+  src:
     local("Jost"),
     url("fonts/vendor/jost/jost-variable.woff2") format("woff2"),
 }
@@ -14,8 +14,8 @@
   font-family: "Jost";
   font-style: italic;
   font-weight: 125 950;
-  font-display: swap;
-  src: 
+  font-display: optional;
+  src:
     local("Jost"),
     url("fonts/vendor/jost/jost-variable-italic.woff2") format("woff2"),
 }
